tests/fail/elaboration/unsolved/placeholder.fathom
//~ exit-code = 1

_
